*** Changes since AVR-LibC-2.2.0:

* General:

* Improvements and additions:

* Issues closed:

* Pull requests:

* Other changes:


*** Changes in AVR-LibC-2.2.0:

* General:

  - Project moved to Github

  - Support for many new devices has been added, like devices from the
    AVR 0-series, 1-series, 2-series, AVR-Dx and AVR-Ex, but also for
    some older devices.

  - Parts of the user manual have been reworked, like the inline assembly
    Cookbook and the documentation of memory sections.

  - The multilib layout of the library, and what device belongs to which
    multilib variant, is no more hard coded in AVR-LibC but follows the
    compiler's multilib layout.

* Improvements and additions:

  - Add support to new multilib layout / 64-bit [long] double compiler
    (Issues #642, #670)

  - Added support for new devices (Issue #824):
    ATtiny202 ATtiny204 ATtiny212 ATtiny214 ATtiny402 ATtiny404
    ATtiny406 ATtiny412 ATtiny414 ATtiny416 ATtiny417 ATtiny424
    ATtiny426 ATtiny427 ATtiny804 ATtiny806 ATtiny807 ATtiny814
    ATtiny816 ATtiny817 ATtiny824 ATtiny826 ATtiny827 ATtiny1604
    ATtiny1606 ATtiny1607 ATtiny1614 ATtiny1616 ATtiny1617 ATtiny1624
    ATtiny1626 ATtiny1627 ATtiny3214 ATtiny3216 ATtiny3217 ATtiny3224
    ATtiny3226 ATtiny3227 ATmega808 ATmega809 ATmega1608 ATmega1609
    ATmega3208 ATmega3209 ATmega4808 ATmega4809

  - Added support for AVR-Dx devices (Issue #881):
    AVR16DD14 AVR16DD20 AVR16DD28 AVR16DD32 AVR32DA28 AVR32DA32
    AVR32DA48 AVR32DB28 AVR32DB32 AVR32DB48 AVR32DD14 AVR32DD20
    AVR32DD28 AVR32DD32 AVR64DA28 AVR64DA32 AVR64DA48 AVR64DA64
    AVR64DB28 AVR64DB32 AVR64DB48 AVR64DB64 AVR64DD14 AVR64DD20
    AVR64DD28 AVR64DD32 AVR128DA28 AVR128DA32 AVR128DA48 AVR128DA64
    AVR128DB28 AVR128DB32 AVR128DB48 AVR128DB64
    AVR64DU28 AVR64DU32

  - Added support for AVR-Ex devices:
    AVR16EA28 AVR16EA32 AVR16EA48 AVR16EB14 AVR16EB20 AVR16EB28 AVR16EB32
    AVR32EA28 AVR32EA32 AVR32EA48 AVR64EA28 AVR64EA32 AVR64EA48
